--- a/angular.json
+++ b/angular.json
@@ -29,12 +29,42 @@
               {
                 "glob": "**/*",
                 "input": "public"
+              },
+              {
+                "glob": "**/*",
+                "input": "src/assets",
+                "output": "/assets"
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/prismjs/themes/prism-tomorrow.min.css",
+              "node_modules/prismjs/plugins/line-numbers/prism-line-numbers.min.css",
+              "node_modules/prismjs/plugins/line-highlight/prism-line-highlight.min.css",
+              "node_modules/prismjs/plugins/command-line/prism-command-line.min.css",
+              "node_modules/prismjs/plugins/diff-highlight/prism-diff-highlight.min.css",
+              "node_modules/prismjs/plugins/previewers/prism-previewers.min.css",
+              "node_modules/prismjs/plugins/inline-color/prism-inline-color.min.css",
+              "node_modules/katex/dist/katex.min.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "node_modules/prismjs/prism.js",
+              "node_modules/prismjs/components/prism-typescript.min.js",
+              "node_modules/prismjs/components/prism-diff.min.js",
+              "node_modules/prismjs/components/prism-bash.min.js",
+              "node_modules/prismjs/components/prism-css.min.js",
+              "node_modules/prismjs/plugins/line-numbers/prism-line-numbers.min.js",
+              "node_modules/prismjs/plugins/line-highlight/prism-line-highlight.min.js",
+              "node_modules/prismjs/plugins/command-line/prism-command-line.min.js",
+              "node_modules/prismjs/plugins/inline-color/prism-inline-color.min.js",
+              "node_modules/prismjs/plugins/diff-highlight/prism-diff-highlight.min.js",
+              "node_modules/prismjs/plugins/previewers/prism-previewers.min.js",
+              "node_modules/emoji-toolkit/lib/js/joypixels.min.js",
+              "node_modules/katex/dist/katex.min.js",
+              "node_modules/katex/dist/contrib/auto-render.min.js",
+              "node_modules/mermaid/dist/mermaid.min.js",
+              "node_modules/clipboard/dist/clipboard.min.js"
+            ],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
